--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-6cf27dc7-bc27-4ea6-9181-6887e46bd6fa;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
